--- a/app/views/treasure/init.jade
+++ b/app/views/treasure/init.jade
@@ -4,37 +4,37 @@ block content
   .panel.panel-default
     .panel-body
       .row
-        .form(role='form', method='post', action='/treasures')
-          .col-xs-6
-            .form-group
-              label(for='treasureName') Treasure Name
-              input#treasureName.form-control(type='text', placeholder='Treasure Name', name='name')
-            .form-group
-              label(for='locName') Location
-              input#locName.form-control(type='text', name='loc')
-              input#locLat.form-control(type='hidden', name='loc')
-              input#locLng.form-control(type='hidden', name='loc')
-            .form-group#hints
-              label(for='hint') Hints
-              input#hint.form-control(type='text', placeholder='Hint', name='hint')
-            button#addHint.btn.btn-primary.btn-lg(type='button') Add Hint
-          .col-xs-6
-            .form-group
-              label(for='photos') Upload Photo
-              input.form-control#photos(type='file',name='photos', multiple=true)
-            .form-group
-              label(for='difficulty') Difficulty
-              select#difficult(name='difficulty')
-                option(value='1') Easy
-                option(value='2') Medium
-                option(value='3') Hard
-            .form-group
-              label(for='tags') Tags
-              input#tags.form-control(type='text', placeholder='Tags seperated by commas', name='tags')
-            .form-group
-              label(for='order') Order
-              input#order.form-control(type='number', name='order')
-            button.btn.btn-primary.btn-lg(type='submit') Submit
+        form(role='form', method='post', action='/treasures', enctype='multipart/form-data')
+         .col-xs-6
+           .form-group
+             label(for='treasureName') Treasure Name
+             input#treasureName.form-control(type='text', placeholder='Treasure Name', name='name')
+           .form-group
+             label(for='locName') Location
+             input#locName.form-control(type='text', name='loc')
+             input#locLat.form-control(type='hidden', name='loc')
+             input#locLng.form-control(type='hidden', name='loc')
+           .form-group#hints
+             label(for='hint') Hints
+             input#hint.form-control(type='text', placeholder='Hint', name='hints')
+           button#addHint.btn.btn-primary.btn-lg(type='button') Add Hint
+         .col-xs-6
+           .form-group
+             label(for='photos') Upload Photo
+             input.form-control#photos(type='file',name='photos', multiple=true)
+           .form-group
+             label(for='difficulty') Difficulty
+             select#difficult(name='difficulty')
+               option(value='1') Easy
+               option(value='2') Medium
+               option(value='3') Hard
+           .form-group
+             label(for='tags') Tags
+             input#tags.form-control(type='text', placeholder='Tags seperated by commas', name='tags')
+           .form-group
+             label(for='order') Order
+             input#order.form-control(type='number', name='order')
+           button.btn.btn-primary.btn-lg(type='submit') Submit
 
 block scripts
   script(src='/js/user/newTreasure.js')
