--- a/app/views/treasure/index.jade
+++ b/app/views/treasure/index.jade
@@ -3,8 +3,26 @@ block content
   h2 View All treasures
   .panel.panel-default
     .panel-body
-      h4 VIEW ALL TREASURES
-
+      .row
+        .col-xs-12
+          table.table.table-striped.table-hover
+            thead
+              tr
+                th Name
+                th Location
+                th Difficulty
+                th Tags
+                th Order
+                th Found?
+            tbody
+              each treasure in treasures
+                tr(data-name='#{treasure.loc.name}', data-lat='#{treasure.loc.lat}', data-lng='#{treasure.loc.lng}')
+                  td= treasure.name
+                  td= treasure.loc.name
+                  td= treasure.difficulty
+                  td= treasure.tags
+                  td= treasure.order
+                  td= treasure.isFound
 block scripts
   script(src='/js/user/home.js')
 
