added map to index

--- a/app/views/treasure/index.jade
+++ b/app/views/treasure/index.jade
@@ -4,6 +4,8 @@ block content
   .panel.panel-default
     .panel-body
       .row
+        #map
+      .row
         .col-xs-12
           table.table.table-striped.table-hover
             thead
