--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,1 +1,1 @@
-body{background-color:#fe33ac}
+body{background-color:#fe33ac}#map{height:400px;width:600px;margin:0 auto;border-radius:5px;border:2px solid #111}
