--- a/app/static/css/style.less
+++ b/app/static/css/style.less
@@ -4,3 +4,11 @@ body{
   background-color: saturate(@base, 5%);
 }
 
+
+#map{
+  height: 400px;
+  width: 600px;
+  margin: 0 auto;
+  border-radius: 5px;
+  border: 2px solid #111;
+}
