--- a/app/views/treasure/view.jade
+++ b/app/views/treasure/view.jade
@@ -4,9 +4,9 @@ block content
   .panel.panel-default
     .panel-body
       .row
-        .col-xs-8
-          #map
-        .col-xs-4
+        .col-xs-6
+          #mapView
+        .col-xs-6
           #photos
             each photo in treasure.photos
               img.img-thumbnail(src=photo)
