--- a/app/static/css/style.less
+++ b/app/static/css/style.less
@@ -12,3 +12,10 @@ body{
   border-radius: 5px;
   border: 2px solid #111;
 }
+
+#mapView{
+  border-radius: 5px;
+  border: 2px solid #111;
+  height: 400px;
+  width: 400px;
+}
