added difficulty helper and sorting

--- a/app/views/treasure/index.jade
+++ b/app/views/treasure/index.jade
@@ -10,12 +10,12 @@ block content
           table.table.table-striped.table-hover
             thead
               tr
-                th Name
-                th Location
-                th Difficulty
+                th!= linkBuilder.sort(query, 'name', 'Name')
+                th!= linkBuilder.sort(query, 'loc.name', 'Location')
+                th!= linkBuilder.sort(query, 'difficulty', 'Difficulty')
                 th Tags
-                th Order
-                th Found?
+                th!= linkBuilder.sort(query, 'order', 'Order')
+                th!= linkBuilder.sort(query, 'isFound', 'is Found?')
             tbody
               each treasure in treasures
                 tr(data-name='#{treasure.loc.name}', data-lat='#{treasure.loc.lat}', data-lng='#{treasure.loc.lng}', data-order='#{treasure.order}')
@@ -24,7 +24,7 @@ block content
                   else
                     td= treasure.name
                   td= treasure.loc.name
-                  td= treasure.difficulty
+                  td= linkBuilder.difficulty(treasure.difficulty)
                   td= treasure.tags
                   td= treasure.order
                   td= treasure.isFound
