--- a/app/views/treasure/index.jade
+++ b/app/views/treasure/index.jade
@@ -25,7 +25,7 @@ block content
                     td= treasure.name
                   td= treasure.loc.name
                   td= linkBuilder.difficulty(treasure.difficulty)
-                  td= treasure.tags
+                  td!= linkBuilder.tags(query, treasure.tags)
                   td= treasure.order
                   td= treasure.isFound
 block scripts
