order is preset when making a new treasure

--- a/app/views/treasure/init.jade
+++ b/app/views/treasure/init.jade
@@ -33,7 +33,7 @@ block content
              input#tags.form-control(type='text', placeholder='Tags seperated by commas', name='tags')
            .form-group
              label(for='order') Order
-             input#order.form-control(type='number', name='order')
+             input#order.form-control(type='number', name='order', value=order, readonly)
            button.btn.btn-primary.btn-lg(type='submit') Submit
 
 block scripts
