--- a/app/views/treasure/init.jade
+++ b/app/views/treasure/init.jade
@@ -1,6 +1,10 @@
 extends ../shared/template
 block content
-  h2 Add a treasure
+  .container
+    #banner.page-header
+      .row
+        .col-xs-12
+          h2#header Add a treasure
   .panel.panel-default
     .panel-body
       .row
