--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,6 +1,10 @@
 extends ../shared/template
 block content
-  h2 Home
+  .container
+    #banner.page-header
+      .row
+        .col-xs-12
+          h2#header Home
   .panel.panel-default
     .panel-body
       h4 Bootstrap Themes and Templates
