--- a/app/views/shared/nav.jade
+++ b/app/views/shared/nav.jade
@@ -1,4 +1,4 @@
-.navbar.navbar-default(role='navigation')
+.navbar.navbar-default.navbar-fixed-top(role='navigation')
   .container
     .navbar-header
       button.navbar-toggle(data-toggle='collapse', data-target='#bs-navbar-collapse')
