updated landing page

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,1 +1,1 @@
-body{background-color:#fe33ac}#map{height:400px;width:800px;margin:0 auto;border-radius:5px;border:2px solid #111}#mapView{border-radius:5px;border:2px solid #111;height:400px;width:400px}
+body{background-color:#5c596b}#map{height:400px;width:800px;margin:0 auto;border-radius:5px;border:2px solid #111}#mapView{border-radius:5px;border:2px solid #111;height:400px;width:400px}#comic{margin:0 auto;border:2px solid #111;border-radius:5px}.check{height:36px}.redex{height:30px}
