--- a/app/static/css/style.less
+++ b/app/static/css/style.less
@@ -1,7 +1,7 @@
-@base: #f938ab;
+@base: #5C596B;
 
 body{
-  background-color: saturate(@base, 5%);
+  background-color: saturate(@base, 0%);
 }
 
 
@@ -18,4 +18,18 @@ body{
   border: 2px solid #111;
   height: 400px;
   width: 400px;
+}
+
+#comic{
+  margin: 0 auto;
+  border: 2px solid #111;
+  border-radius: 5px;
+}
+
+.check{
+  height: 36px;
+}
+
+.redex{
+  height: 30px;
 }
