--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -7,14 +7,17 @@ block content
           h2#header Home
   .panel.panel-default
     .panel-body
-      h4 Bootstrap Themes and Templates
+      h4 Welcome to the Treasure Map
       ul
-        li: a(href='http://bootswatch.com/', target='_blank') http://bootswatch.com/
-        li: a(href='http://bootstrapzero.com/', target='_blank') http://bootstrapzero.com/
-        li: a(href='http://startbootstrap.com/', target='_blank') http://startbootstrap.com/
-        li: a(href='http://www.prepbootstrap.com/', target='_blank') http://www.prepbootstrap.com/
-        li: a(href='http://www.blacktie.co/', target='_blank') http://www.blacktie.co/
-        li: a(href='https://bootstrapmaster.com/', target='_blank') https://bootstrapmaster.com/
-        li: a(href='http://bootstrapstyler.com/', target='_blank') http://bootstrapstyler.com/
-
-
+        li A database of treasures!
+        li Go to 'Treasures' to view all treasures, with driving directions between them!
+        li Only one treasure is active at a time. Found treasures are marked with a treasure chest.
+        li Click a treasure name to view hints, pictures, map, and declare it found.
+        li Once a treasure is found, the next one will become active.
+        li Add new treasures with geocoded location, uploaded pictures, and hints.
+        li Contact: mfbadr@gmail.com, @mikeybadr
+      .row
+        .col-xs-2
+        .col-xs-8
+          img#comic(src='/img/calvin.gif')
+        .col-xs-2
